# Agent

./: .env.example  .gitignore  CLAUDE.md  INSTALL.md  LICENSE  README.en.md  README.md  pyproject.toml  pytest.ini  todo_state.json
.claude/: settings.local.json
docs/: LOGGING.md  LOGGING_FIXES.md
src/cli/: main.py
src/core/: agent.py  logger.py  loop.py  monitor.py
src/helper/: README.md  __init__.py  message_helper.py
src/skills/: __init__.py  manager.py
src/skills/builtin/code_review/: SKILL.md
src/skills/builtin/git_skill/: SKILL.md
src/tools/: __init__.py  bash.py  file.py  sub_agent.py  todo.py
templates/: system.md
tests/: conftest.py
tests/core/: foundation_function_test.py
